// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextField It should render a default Textfiled 1`] = `
<div>
  <div
    class="quill-input__container"
  >
    <div
      class="quill-input__wrapper quill-input__wrapper__variant--outline quill-input__wrapper__size--md quill-input__wrapper__status--neutral"
    >
      <div
        class="quill-input-label__wrapper"
      >
        <input
          class="input peer input__align--left input__size--md"
          type="text"
        />
      </div>
    </div>
    <div
      class="message__container"
    />
  </div>
</div>
`;

exports[`TextField should handle the hover for outline variant 1`] = `
<div
  class="quill-input-label__wrapper"
>
  <input
    class="input peer input__align--left input__size--md"
    placeholder="Placeholder"
    type="text"
  />
</div>
`;

exports[`TextField should render a TextField with error status 1`] = `
<div>
  <div
    class="quill-input__container"
  >
    <div
      class="quill-input__wrapper quill-input__wrapper__variant--outline quill-input__wrapper__size--md quill-input__wrapper__status--error"
    >
      <div
        class="quill-input-label__wrapper"
      >
        <input
          class="input peer input__align--left input__size--md"
          type="text"
        />
      </div>
    </div>
    <div
      class="message__container"
    />
  </div>
</div>
`;

exports[`TextField should render a TextField with success status 1`] = `
<div>
  <div
    class="quill-input__container"
  >
    <div
      class="quill-input__wrapper quill-input__wrapper__variant--outline quill-input__wrapper__size--md quill-input__wrapper__status--success"
    >
      <div
        class="quill-input-label__wrapper"
      >
        <input
          class="input peer input__align--left input__size--md"
          type="text"
        />
      </div>
    </div>
    <div
      class="message__container"
    />
  </div>
</div>
`;
